--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -8,7 +8,6 @@ on:
       - requirements-runpod.txt
       - diffusion/**
       - .github/workflows/build-image.yml
-  workflow_dispatch: {}
 
 jobs:
   build:
@@ -19,33 +18,28 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push (prod tag)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: docs/Orumaihinew.dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/gap-animatediff:prod
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gap-animatediff:cache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gap-animatediff:cache,mode=max
-
+          tags: orumaihi/gap-animatediff:prod
+          cache-from: type=registry,ref=orumaihi/gap-animatediff:cache
+          cache-to: type=registry,ref=orumaihi/gap-animatediff:cache,mode=max
       - name: Build and push (debug tag)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: docs/Orumaihinew.dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/gap-animatediff:debug
+          tags: orumaihi/gap-animatediff:debug
