--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -7,19 +7,19 @@ on:
       - docs/Orumaihinew.dockerfile
       - requirements-runpod.txt
       - diffusion/**
-      - .github/workflows/build-image.yml
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/lib/android \
+                      /opt/hostedtoolcache/CodeQL /usr/local/share/boost
+          sudo apt-get clean
+          df -h
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
@@ -27,19 +27,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push (prod tag)
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: docs/Orumaihinew.dockerfile
           push: true
           tags: orumaihi/gap-animatediff:prod
-          cache-from: type=registry,ref=orumaihi/gap-animatediff:cache
-          cache-to: type=registry,ref=orumaihi/gap-animatediff:cache,mode=max
-      - name: Build and push (debug tag)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: docs/Orumaihinew.dockerfile
-          push: true
-          tags: orumaihi/gap-animatediff:debug
