Align torch/vision; shrink context; CI workflow update

--- a/requirements-runpod.txt
+++ b/requirements-runpod.txt
@@ -1,19 +1,21 @@
 # Pinned dependencies for RunPod serverless prebuilt image
-# These versions chosen for compatibility with base image runpod/pytorch:2.4.0-py3.11-cuda12.4.1
+# Compatible with base image: runpod/pytorch:2.1.0-py3.10-cuda11.8.0-runtime-ubuntu22.04
 # Adjust only if handler logs show specific incompatibilities.
-torch==2.4.0
-torchvision==0.19.0
-# Core diffusion stack
+torch==2.1.0
+torchvision==0.16.0
+# Core diffusion stack (use torch from base image 2.1.x)
 diffusers==0.31.0
 transformers==4.45.0
 accelerate==1.2.0
 safetensors==0.4.3
 controlnet-aux==0.0.8
+
 # Imaging / media
 opencv-python-headless==4.10.0.84
 Pillow==10.4.0
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
+
 # Utilities / config
 einops==0.8.0
 omegaconf==2.3.0
@@ -21,6 +23,7 @@ numpy==1.26.4
 tqdm==4.66.5
 runpod==1.7.4
 python-dotenv==1.0.1
-# Optional (add later if needed to reduce build sizes)
+
+# Optional (add later to keep image smaller / avoid extra git clones)
 # git+https://github.com/openai/CLIP.git
 # git+https://github.com/tencent-ailab/IP-Adapter.git
