--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -7,26 +7,39 @@ on:
       - docs/Orumaihinew.dockerfile
       - requirements-runpod.txt
       - diffusion/**
+  workflow_dispatch:
+
+concurrency:
+  group: build-image
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Free disk space
+      - name: Free disk space (pre)
         run: |
           sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/lib/android \
-                      /opt/hostedtoolcache/CodeQL /usr/local/share/boost
+                      /opt/hostedtoolcache/CodeQL /usr/local/share/boost \
+                      /usr/local/.ghcup /home/linuxbrew \
+                      /opt/hostedtoolcache/go \
+                      /opt/hostedtoolcache/Python
           sudo apt-get clean
+          docker system prune -af || true
           df -h
+
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -34,3 +47,11 @@ jobs:
           file: docs/Orumaihinew.dockerfile
           push: true
           tags: orumaihi/gap-animatediff:prod
+          provenance: false
+          no-cache: true
+
+      - name: Free disk space (post)
+        if: always()
+        run: |
+          docker system prune -af || true
+          df -h
